webserver/k8s/secure-webserver.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-webserver
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: secure-webserver
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: secure-webserver
            port:
              number: 80
